# gym-v

./: .gitignore  .pre-commit-config.yaml  README.md  generate_env_gallery.py  package-lock.json  package.json  pyproject.toml  test_numbrix_manual.py
deploy/: REWARD_SERVER.md  deploy.py  server.py  start.sh  utils.py
docs/: DIFFICULTY_STANDARD.md
docs/plans/: 2026-01-24-rlve-vision-environments-batch1.md  2026-01-24-rlve-vision-environments-batch2.md  2026-01-24-rlve-vision-environments-batch3.md
evaluation/: eval.py
examples/: demo.py  dropdown_demo.py
gym-v/: main.py
gym_v/: __init__.py  core.py  logger.py  utils.py
gym_v/envs/: __init__.py  __init__.py.bak  registration.py  retro_env.py
gym_v/envs/gamerl/: __init__.py  chess_ranger.py  chess_ranger_qa.py  freecell.py  freecell_qa.py  hue.py  hue_qa.py  jewel2.py  klondike.py  klondike_qa.py  langton_ant.py  langton_ant_qa.py  lifegame.py  maze.py  maze_3d.py  maze_3d_qa.py  minecraft.py  minesweeper.py  pacman.py  pacman_qa.py  parameter_controllers.py  pyramidchess.py  pyramidchess_qa.py  rhythm_game.py  rhythm_game_qa.py  rubiks_cube.py  snake.py  snake_qa.py  sokoban.py  sokoban_qa.py  space_invaders.py  spider_solitaire.py  star_battle.py  star_battle_qa.py  sudoku.py  sudoku_qa.py  tangram.py  tangram_qa.py  tents.py  tetris.py  (+10 more)
gym_v/envs/gamerl_multiturn/: __init__.py  langton_ant.py  lifegame.py  maze.py  minesweeper.py  pacman.py  snake.py  space_invaders.py  sudoku.py  tetris.py
gym_v/envs/minigrid/: __init__.py  doorkey.py  dynamicobstacles.py  empty.py  fourrooms.py  lavagap.py  multiroom.py  unlock.py
gym_v/envs/miniwob/: __init__.py  adapter.py
gym_v/envs/offline/: grader.py  sampler.py  single_turn.py  source.py  utils.py
gym_v/envs/perception/: __init__.py  chart_to_table.py  contour_plot.py  dag_to_topo_order.py  flow_network.py  function_graph.py  graph_to_adjacency.py  graph_to_mst.py  parameter_controllers.py  parametric_curve.py  polar_plot.py  tree_to_traversal.py  vector_field.py
gym_v/envs/reasongym/: __init__.py  arc_1d.py  binary_matrix.py  circuit_logic.py  game_of_life.py  kakurasu.py  knight_swap.py  largest_island.py  maze.py  mini_sudoku.py  n_queens.py  parameter_controllers.py  rectangle_count.py  rotate_matrix.py  rotten_oranges.py  shortest_path.py  spiral_matrix.py  sudoku.py  survo.py  tower_of_hanoi.py  tsumego.py
gym_v/envs/rlve/: __init__.py  __init__.py.bak  __init__.py.bak2  addition_table.py  binario_no_adjacency_requirement.py  binary_tree_leaf_num_expectation.py  block_image.py  campsite_puzzle.py  card_coloring_counting.py  circulating_grid.py  coin_square_game.py  coloring_counting.py  convex_hull.py  eight_digit_puzzle.py  face_right_way.py  fbi_binary_tree.py  gra_minima_game.py  graph_contain_tree_counting.py  graph_isomorphism.py  grid_bfs.py  grid_coloring_counting.py  grid_component.py  grid_local_minimum_counting.py  grid_parity_construction.py  grid_triangle_counting.py  hamiltonian_path.py  hamiltonian_path_existence.py  hitori_puzzle.py  jug_puzzle.py  klo_blocks.py  knights_and_knaves.py  landform_generation_counting.py  largest_convex_polygon.py  largest_rectangle_among_points.py  light_up_puzzle.py  longest_path.py  magic_square_puzzle.py  matrix_permutation_both_diagonal_one.py  matrix_permutation_main_diagonal_one.py  matrix_pooling.py  (+45 more)
gym_v/envs/sphinx/: __init__.py  odd_one_out.py  parameter_controllers.py  sequence_completion.py  symmetry_fill.py  transform_result.py
gym_v/utils/: __init__.py  gamerl_utils.py  image.py  parameter_controller.py  passive_env_checker.py  record_constructor.py  seeding.py  vgrp_base.py
gym_v/wrappers/: __init__.py  common.py  frame_skip.py  history_recorder.py
services/rewards/: __init__.py  base.py  registry.py  utils.py
tests/: generate_single_turn_report.py  single_turn_report.html  test_difficulty.py  test_disable_text_feedback.py  test_gamerl_env.py  test_geneval2_env.py  test_geneval_env.py  test_genexam_env.py  test_offline_env.py  test_perception_env.py  test_reasoning_gym.py  test_reasoning_gym_env.py  test_reasoning_gym_kakurasu.py  test_reasoning_gym_knight_swap.py  test_reasoning_gym_mini_sudoku.py  test_reasoning_gym_sudoku.py  test_reasoning_gym_survo.py  test_reasoning_gym_tsumego.py  test_retro_integration.py  test_rlve_env.py  test_single_turn_envs.py  test_single_turn_envs.py.bak3  test_sphinx.py  test_vgrp.py  test_vgrp_env.py  test_vlmeval_env.py  test_wise_env.py
(+274 files in other folders)
