[project]
name = "gym-v"
version = "0.1.0"
description = "A unified framework for vision-language environments with Gymnasium-compatible interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "gymnasium>=1.2.2",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
textarena = [
    "textarena>=0.7.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
