[project]
name = "gym-v"
version = "0.1.0"
description = "A unified framework for vision-language environments with Gymnasium-compatible interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "gymnasium>=1.2.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "orjson>=3.11.5",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "reasoning-gym>=0.1.24",
    "scipy>=1.15.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gym_v", "gym_v.*"]

[tool.setuptools.package-data]
gym_v = [
    "envs/assets/**/*.png",
    "envs/assets/**/*.jpg",
    "envs/assets/**/*.ttf",
    "envs/assets/**/*.otf",
]


[project.optional-dependencies]
vlmeval = [
    "vlmeval @ git+https://github.com/open-compass/VLMEvalKit.git@v0.2",
]
reasoning-gym = [
    "reasoning-gym>=0.1.24",
]
games = [
    "textarena>=0.7.4",
    "pettingzoo[classic]>=1.25.0",
]
spatial = [
    "minigrid>=2.5.0",
    "miniworld @ git+https://github.com/Farama-Foundation/Miniworld.git",
]
temporal = [
    "stable-retro>=0.9.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Pre-existing issues in files originally from RLVE
"gym_v/envs/algorithmic/**/*.py" = ["B007", "B011", "B023", "E722", "E741", "F841"]
"gym_v/envs/puzzles/**/*.py" = ["B007", "B011", "B023", "E722", "E741", "F841"]
"gym_v/envs/perception/**/*.py" = ["B007", "B011", "B023", "E722", "E741", "F841"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = false
known-first-party = ["gym_v"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
